--- a/my-projects/shopping-list/package.json
+++ b/my-projects/shopping-list/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@ngrx/effects": "^17.2.0",
+    "@ngrx/store": "^17.2.0",
     "bootstrap": "^3.4.1",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
@@ -28,6 +30,8 @@
     "@angular-devkit/build-angular": "^17.1.2",
     "@angular/cli": "^17.1.2",
     "@angular/compiler-cli": "^17.1.0",
+    "@ngrx/router-store": "^17.2.0",
+    "@ngrx/store-devtools": "^17.2.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
